[package]
name = "sfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"sfm-sys" = { path = "../sfm-sys" }
"zerocopy" = { version = "0.6" }
"sha2" = { version = "0.10" }
"thiserror" = { version = "1.0" }
nix = { version = "0.26.2", features = ["socket"] }
rand = "0.8.5"
